# Israel-Lara-Coleccion-flujos

./: CMakeLists.txt  README.md  main.cpp
Geometria/: circulo.cpp  cuadrado.cpp  geometria.h  triangulo.cpp
ciencia/: ciencia.cpp  ciencia.h
ciencia/fisica/: fisica.cpp  fisica.h
ciencia/matematicas/: matematicas.cpp
ciencias/: flujos_integrados.cpp  flujos_integrados.h  generalidades.h
ejercicio1/: generalidades.cpp  generalidades.h
ejercicio2/: flujos_integrados.h
ejercicio3/: estado_flujo.cpp  estado_flujo.h
matematicas/: argumentos_locales.cpp  argumentos_locales.h  estado_flujo.cpp  estado_flujo.h  flujo_archivos.cpp  flujo_archivos.h  flujo_cadenas.cpp  flujo_cadenas.h  formato.cpp  formato.h  matematicas.h
